mudancas na funcionalidade de login

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PGHOST=database-1.ccvm7qxfei3u.sa-east-1.rds.amazonaws.com
 PGPASSWORD=XLKtnxvxfJqdsWGIfXDF
 PGDATABASE=postgres
 PGPORT=5432
+
+SESSION_SECRET=secret
