--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0"
