--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node.index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,11 @@
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "session-file-store": "^1.5.0"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/react-native": "^7.2.0",
+    "jest": "^27.0.6",
+    "react-test-renderer": "^17.0.2"
   }
 }
