--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.9",
+    "node-cron": "^3.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
